[tool.poetry]
name = "keyboard-fights-api"
version = "0.1.0"
description = ""
authors = ["PATH242 <mennashaheen2357@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
fastapi = "^0.114.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
